Add tip about setting MAVEN_OPTS to fix issue #1; Add cd statements prior to maven statements where the location is ambiguous